--- a/app_package/static/scss/_navbar.scss
+++ b/app_package/static/scss/_navbar.scss
@@ -226,26 +226,7 @@
     .navbar_custom {
       justify-content: center;
       height: fit-content;
-      // background-color: ;
-      // height: 100%;
-      // height: 8rem;
-      /* Navbar Left */
-      // .nav_left {
-      //   // min-width: 0; // very important to keep other divs from being kicked out of screen on small screen ... max-width not set
-      //   // max-width: 8rem;
 
-      // }
-      // .nav_left_a_href{
-      //   // display: flex;
-      //   // justify-content: center;
-      //   // align-items: center;
-      //   // height: 100%;
-      //   // width:100%;
-      // }
-      // .nav_left{
-      //   height:100%;
-      //   background-color: #df382c;
-      // }
       .nav_left{width:12rem;}
       .nav_left_a_href{width:10rem}
       .dash_and_data_logo {
@@ -270,6 +251,7 @@
         display: flex;
         justify-content: flex-end;
         background: none;
+        height: var(--nav-height);
 
 
 
